Fixing Spacing

--- a/dev/taptales/assets/css/themes.css
+++ b/dev/taptales/assets/css/themes.css
@@ -254,7 +254,7 @@ img {
 		margin: 20px 0 10px;
 	}
 	.tap-header .nav {
-		margin: 15px 0 0;
+		margin: 15px 0 15px;
 		padding: 0 10px;
 	}
 	.header .nav li {
@@ -307,7 +307,7 @@ img {
 		font-size: 0.88em;
 	}
 	.grid li > a {
-	    margin: 5px;
+	    margin: 10px;
 	}
 	.grid .gallery-category {
 		padding: 0 7px;
